--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 		<!-- Character HUD -->		
 		<div id="heading">
 			<div class="lside"><h1>Seth's Super Maze</h1></div>
-			<div class="middle">Player X = &emsp;&emsp;&emsp; Player Y =</div>
-			<div class="rside">Percentage Completed =</div>
+			<div class="middle">Press Space to Take a Picture</div>
 		</div>
 		<div id="background-bar"></div>
 			
