--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<div id="heading">
 			<div class="lside"><h1>Seth's Super Maze</h1></div>
 			<div class="middle">Press Space to Take a Picture</div>
+			<div class="rside">Use Arrow Keys to Move Around</div>
 		</div>
 		<div id="background-bar"></div>
 			
